my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EOLDVECT/T_EOLDVECT-struct.h
/* Generated by dmlc, do not edit! */

#ifndef T_EOLDVECT_STRUCT_H
#define T_EOLDVECT_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_EOLDVECT(void);


#endif /* not T_EOLDVECT_STRUCT_H */
